--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=myGameListBoot
-spring.datasource.url=jdbc:mariadb://192.168.1.96:3306/myGameListBoot_db
+spring.datasource.url=jdbc:mariadb://localhost:3306/myGameListBoot_db
 spring.datasource.username=gameListUser
-spring.datasource.password=1234
+spring.datasource.password=abc123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Configuración de Hibernate (JPA)
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 
 
